回答選択時にマルバツ表示

--- a/app/views/level/show.html.erb
+++ b/app/views/level/show.html.erb
@@ -36,6 +36,12 @@
       </div>
     </div>
   <% end %>
+  <div id="correct_sign" class="hidden text-red-500 font-bold text-[12rem] md:text-[20rem] absolute inset-1/2 mt-[-22rem] ml-[-6rem] md:mt-[-14rem] md:ml-[-10rem]">
+    ○
+  </div>
+  <div id="wrong_sign" class="hidden text-blue-500 font-bold text-[12rem] md:text-[20rem] absolute inset-1/2 mt-[-22rem] ml-[-6rem] md:mt-[-14rem] md:ml-[-10rem]">
+    ✕
+  </div>
 </div>
 <div id="finish" class="hidden">
   <div class="max-w-screen-2xl px-4 md:px-8 mx-auto mt-24 lg:mt-48">
