--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5">
+    <main class="container mx-auto mt-10 md:mt-20 px-5">
       <%= yield %>
     </main>
   </body>
