safariでも動くように対応

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <%= content_for?(:header) ? yield(:header) : '' %>
+    <%= content_for?(:head) ? yield(:head) : '' %>
   </head>
 
   <body>
